--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.17.1",
-    "@mui/lab": "^7.0.0-beta.11",
+    "@mui/lab": "5.0.0-alpha.125",
     "@mui/material": "^5.17.1",
     "@mui/x-date-pickers": "^7.29.0",
     "axios": "^1.8.4",
